feat: added upload avatar to user. fix: remove column is_admin to role (user, premium, admin); added validations to bad requests
