# docs/swagger.json
@@ -300,6 +300,55 @@
                     }
                 }
             }
+        },
+        "/users/{id}/avatar": {
+            "post": {
+                "description": "Upload avatar image (JPEG/PNG) for a user",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Upload user avatar",
+                "operationId": "upload-avatar",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Avatar image (JPEG/PNG), max 2MB",
+                        "name": "avatar",
+                        "in": "formData",
+                        "required": true,
+                        "type": "file"
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -341,6 +390,10 @@
                 "apartment": {
                     "type": "string"
                 },
+                "avatar": {
+                    "type": "string",
+                    "format": "byte"
+                },
                 "city": {
                     "type": "string"
                 },
@@ -359,9 +412,6 @@
                 "id": {
                     "type": "integer"
                 },
-                "is_admin": {
-                    "type": "boolean"
-                },
                 "is_blocked": {
                     "type": "boolean"
                 },
@@ -376,6 +426,10 @@
                 },
                 "phone": {
                     "type": "string"
+                },
+                "role": {
+                    "type": "string",
+                    "example": "user"
                 },
                 "street": {
                     "type": "string"
@@ -396,6 +450,7 @@
                 "login",
                 "password",
                 "phone",
+                "role",
                 "street"
             ],
             "properties": {
@@ -418,10 +473,6 @@
                 "house": {
                     "type": "string",
                     "example": "1"
-                },
-                "is_admin": {
-                    "type": "boolean",
-                    "example": false
                 },
                 "is_blocked": {
                     "type": "boolean",
@@ -446,6 +497,10 @@
                 "phone": {
                     "type": "string",
                     "example": "+79991234567"
+                },
+                "role": {
+                    "type": "string",
+                    "example": "user"
                 },
                 "street": {
                     "type": "string",
@@ -508,10 +563,6 @@
                     "type": "string",
                     "example": "1"
                 },
-                "is_admin": {
-                    "type": "boolean",
-                    "example": false
-                },
                 "is_blocked": {
                     "type": "boolean",
                     "example": false
@@ -531,6 +582,10 @@
                 "phone": {
                     "type": "string",
                     "example": "+79991234567"
+                },
+                "role": {
+                    "type": "string",
+                    "example": "user"
                 },
                 "street": {
                     "type": "string",
